--- a/package.json
+++ b/package.json
@@ -40,5 +40,5 @@
   "bugs": {
     "url": "https://github.com/yourusername/ioBroker.solar-calculator/issues"
   },
-  "readmeFilename": "iobroker_readme.md"
+  "readmeFilename": "README.md"
 }
